# querysmith

./: .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
bins/context-enricher/: Cargo.toml
bins/context-enricher/src/: main.rs
bins/evals/: Cargo.toml
bins/evals/src/: main.rs
bins/query-smith-cli/: Cargo.toml
bins/query-smith-cli/src/: main.rs
bins/query-smith-web/: Cargo.toml
bins/query-smith-web/src/: main.rs
bins/slack-bot/: Cargo.toml
bins/slack-bot/src/: main.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: error.rs  lib.rs  llm.rs  orchestrator.rs  registry.rs  runtime.rs  tools.rs  traits.rs
crates/agent-core/src/tools/: debug_query.rs  run_sql.rs  search_tables.rs
crates/memory-svc/: Cargo.toml
crates/memory-svc/src/: error.rs  lib.rs  models.rs  service.rs
crates/metadata-svc/: Cargo.toml
crates/metadata-svc/src/: error.rs  lib.rs  lineage.rs  models.rs  service.rs
crates/rag-engine/: Cargo.toml
crates/rag-engine/src/: cache.rs  error.rs  lib.rs  retrieval.rs  types.rs
crates/warehouse-conn/: Cargo.toml
crates/warehouse-conn/src/: error.rs  lib.rs  postgres.rs  sqlite.rs  traits.rs
crates/workflow-engine/: Cargo.toml
crates/workflow-engine/src/: engine.rs  error.rs  lib.rs  models.rs  scheduler.rs
docs/: index.md
