[workspace]
resolver = "2"
members = [
    "crates/agent-core",
    "crates/metadata-svc",
    "crates/rag-engine",
    "crates/warehouse-conn",
    "crates/memory-svc",
    "bins/context-enricher",
    "bins/evals",
    "bins/query-smith-web",
    "bins/slack-bot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["yasserrmd <arafath.yasser@gmail.com>"]
license = "MIT"
repository = "https://github.com/yasserrmd/query-smith"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
