[package]
name = "context-enricher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "context-enricher"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
warehouse-conn = { path = "../../crates/warehouse-conn" }
metadata-svc = { path = "../../crates/metadata-svc" }
rag-engine = { path = "../../crates/rag-engine" }
