[package]
name = "slack-bot"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "slack-bot"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures-util.workspace = true
reqwest = { version = "0.12", features = ["json"] }
agent-core = { path = "../../crates/agent-core" }
memory-svc = { path = "../../crates/memory-svc" }
